01-pod.yml
apiVersion: v1
kind: Pod
metadata:
   name: nginx
spec:
   containers:
      - name: nginx
        image: nginx:alpine
