03-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
   name: nginx-deployment
spec:
   selector:
      matchLabels:
         app: nginx
   template:
      metadata:
         labels:
            app: nginx
      spec:
         containers:
            - name: nginx
              image: nginx:alpine
              resources:
                 requests:
                    memory: '64Mi'
                    cpu: '200m'
                 limits:
                    memory: '128Mi'
                    cpu: '500m'
              readinessProbe:
                 httpGet:
                    path: /
                    port: 80
                 initialDelaySeconds: 5
                 periodSeconds: 10
              livenessProbe:
                 tcpSocket:
                    port: 80
                 initialDelaySeconds: 15
                 periodSeconds: 20
              ports:
                 - containerPort: 80
