06-randompod.yaml
apiVersion: v1
kind: Pod
metadata:
   name: ubuntu
spec:
   containers:
      - name: ubuntu
        image: ubuntu
        args:
           - sleep
           - infinity
