13-pod-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
   name: nginx
spec:
   containers:
      - name: nginx
        image: nginx:alpine
        volumeMounts:
           - name: config
             mountPath: '/config'
             readOnly: true
   volumes:
      - name: config
        configMap:
           name: game-demo # el nombre del configmap que queremos montar
           items: # Un arreglo de keys del configmap para crear como archivos
              - key: 'game.properties'
                path: 'game.properties'
              - key: 'user-interface.properties'
                path: 'user-interface.properties'
