11-hello-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: hello-app
spec:
   rules:
      - http:
           paths:
              - path: /v1
                pathType: Prefix
                backend:
                   service:
                      name: hello-v1
                      port:
                         number: 8080
              - path: /v2
                pathType: Prefix
                backend:
                   service:
                      name: hello-v2
                      port:
                         number: 8080
